# url-shortener

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: design.excalidraw
src/url_shortener/: __init__.py  __main__.py  main.py  models.py  routes.py  server.py  shortener.py  utils.py
src/url_shortener/db/: session.py
src/url_shortener/keygen/: counter.py  session.py
tests/: conftest.py  test_shortener.py
tests/integration/: test_get_original_url.py  test_shorten.py
tests/unit/: test_generate_hash.py
