[project]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener"
authors = [
    { name = "Benjamin Fovet", email = "b.fovet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
